--- a/project/FrontEnd/package.json
+++ b/project/FrontEnd/package.json
@@ -14,6 +14,8 @@
     "uikit": "^3.9.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-star-rating": "^2.1.0",
+    "vue3-star-ratings": "^1.1.0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
